# vcs_tcpip

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  simple_message_client.c  simple_message_server.c
core/libsimple_message_client_commandline_handling/: Makefile  README.txt  doxygen.dcf  simple_message_client_commandline_handling.c  simple_message_client_commandline_handling.h  smc_parsecommandline.3
core/simple_message_server_logic/: Makefile  README.txt  bin2c.c  content_entry_with_img.thtml  content_entry_without_img.thtml  doxygen.dcf  global.mak  simple_message_server_logic.1  simple_message_server_logic.c  vcs_tcpip_bulletin_board.php  vcs_tcpip_bulletin_board_response_error.thtml  vcs_tcpip_bulletin_board_response_ok.thtml
